--- a/LSTM2.ipynb
+++ b/LSTM2.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_price = df_price.dropna()"
+    "df_price = df_price.dropna()    #nan 결측치 제거"
    ]
   },
   {
@@ -91,7 +91,7 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler      #데이터 정규화 도구\n",
     "\n",
     "scaler = MinMaxScaler()\n",
     "scale_cols = ['Open', 'High', 'Low', 'Close', 'Volume']\n",
@@ -110,7 +110,7 @@
    "outputs": [],
    "source": [
     "train = df_scaled[:-300]\n",
-    "test = df_scaled[-300:]"
+    "test = df_scaled[-300:]     #최근 데이터에서 300일치 데이터만큼을 test set으로 이용"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_dataset(data, label, window_size=50):\n",
+    "def make_dataset(data, label, window_size=50):      #윈도우 생성 과정 함수화\n",
     "    feature_list = []\n",
     "    label_list = []\n",
     "    for i in range(len(data) - window_size):\n",
@@ -147,26 +147,23 @@
    "source": [
     "feature_cols = ['Open', 'High', 'Low', 'Volume']\n",
     "label_cols = ['Close']\n",
+    "#train, test 모델 데이터생성\n",
     "\n",
     "train_feature = train[feature_cols]\n",
     "train_label = train[label_cols]\n",
     "\n",
-    "# train dataset\n",
     "train_feature, train_label = make_dataset(train_feature, train_label, 20)\n",
     "\n",
-    "# train, validation set 생성\n",
     "from sklearn.model_selection import train_test_split\n",
     "x_train, x_valid, y_train, y_valid = train_test_split(train_feature, train_label, test_size=0.2)\n",
     "\n",
     "x_train.shape, x_valid.shape\n",
-    "# ((6086, 20, 4), (1522, 20, 4))\n",
     "\n",
     "test_feature = test[feature_cols]\n",
     "test_label = test[label_cols]\n",
     "\n",
     "test_feature, test_label = make_dataset(test_feature, test_label, 20)\n",
-    "test_feature.shape, test_label.shape\n",
-    "# ((180, 20, 4), (180, 1))"
+    "test_feature.shape, test_label.shape"
    ]
   },
   {
@@ -290,7 +287,7 @@
    ],
    "source": [
     "model.compile(loss='mse', optimizer='adam')\n",
-    "early_stop = EarlyStopping(monitor='val_loss', patience=5) #overfitting 방지\n",
+    "early_stop = EarlyStopping(monitor='val_loss', patience=5) #overfitting 방지, 같은 오차가 5번나오면 훈련중지\n",
     "filename = os.path.join('tmp_checkpoint.h5')\n",
     "checkpoint = ModelCheckpoint(filename, monitor='val_loss', verbose=1, save_best_only=True, mode='auto')\n",
     "\n",
