--- a/GRU2.ipynb
+++ b/GRU2.ipynb
@@ -151,22 +151,18 @@
     "train_feature = train[feature_cols]\n",
     "train_label = train[label_cols]\n",
     "\n",
-    "# train dataset\n",
     "train_feature, train_label = make_dataset(train_feature, train_label, 20)\n",
     "\n",
-    "# train, validation set 생성\n",
     "from sklearn.model_selection import train_test_split\n",
     "x_train, x_valid, y_train, y_valid = train_test_split(train_feature, train_label, test_size=0.2)\n",
     "\n",
     "x_train.shape, x_valid.shape\n",
-    "# ((6086, 20, 4), (1522, 20, 4))\n",
     "\n",
     "test_feature = test[feature_cols]\n",
     "test_label = test[label_cols]\n",
     "\n",
     "test_feature, test_label = make_dataset(test_feature, test_label, 20)\n",
-    "test_feature.shape, test_label.shape\n",
-    "# ((180, 20, 4), (180, 1))"
+    "test_feature.shape, test_label.shape"
    ]
   },
   {
